--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
+<p-toast position="top-right" [breakpoints]="{'920px': {width: '100%', right: 0, left: 0}}"></p-toast>
+
 <router-outlet></router-outlet>
