--- a/src/app/modules/usuarios/page/usuarios-home/usuarios-home.component.html
+++ b/src/app/modules/usuarios/page/usuarios-home/usuarios-home.component.html
@@ -1,3 +1,3 @@
 <app-toolbar-navigation></app-toolbar-navigation>
 
-<h3>Tela de Usuários</h3>
+<app-usuarios-table [usuarios]="usuariosList"></app-usuarios-table>
