feat: add event handling for user actions in UsuariosTable component

--- a/src/app/modules/usuarios/page/usuarios-home/usuarios-home.component.html
+++ b/src/app/modules/usuarios/page/usuarios-home/usuarios-home.component.html
@@ -1,3 +1,6 @@
 <app-toolbar-navigation></app-toolbar-navigation>
 
-<app-usuarios-table [usuarios]="usuariosList"></app-usuarios-table>
+<app-usuarios-table [usuarios]="usuariosList" (usuarioEvent)="handleUsuarioAction($event)"
+  (deleteUsuarioEvent)="handleDeleteUsuarioAction($event)"></app-usuarios-table>
+
+<p-confirmDialog [style]="{width: '30vw'}"></p-confirmDialog>
