--- a/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
+++ b/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
@@ -65,7 +65,7 @@
             <th>
               <div class="flex justify-content-center">
                 <p-button styleClass="p-button-info" icon="pi pi-plus" label="Novo" pTooltip="Adicionar usuário"
-                  tooltipPosition="top"></p-button>
+                  tooltipPosition="top" (onClick)="handleUsuarioEvent(addUsuarioEvent)"></p-button>
               </div>
             </th>
           </tr>
@@ -81,14 +81,14 @@
             <td>
               <div class="flex justify-content-center align-content-center align-items-center">
                 <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-warning p-button-text"
-                  pTooltip="Editar usuário"></button>
-                  <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-button-text"
-                  pTooltip="Remover usuário"></button>
+                  pTooltip="Editar usuário" (click)="handleUsuarioEvent(editUsuarioEvent, usuario.id)"></button>
+                <i class="pi pi-ellipsis-v"></i>
+                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-button-text"
+                  pTooltip="Remover usuário" (click)="handleDeleteUsuario(usuario.id, usuario.email)"></button>
               </div>
             </td>
           </tr>
         </ng-template>
-
       </p-table>
     </p-card>
   </div>
