--- a/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
+++ b/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
@@ -1,10 +1,25 @@
 <div class="grid">
   <div class="col-12">
-    <p-card styleClass="shadow-3 m-2" header="Usuários cadastrados">
+    <p-card styleClass="shadow-3 m-2">
+      <p-toolbar styleClass="mb-3">
+        <p-button styleClass="p-button-info" icon="pi pi-plus-circle" label="Novo" pTooltip="Adicionar usuário"
+          tooltipPosition="top" (onClick)="handleUsuarioEvent(addUsuarioEvent)"></p-button>
+      </p-toolbar>
+
       <p-table #usuariosTable [value]="usuarios" [rows]="5" [paginator]="true" [responsive]="true"
-        [globalFilterFields]="['nome', 'email', 'perfil']" [tableStyle]="{'min-width': '75rem'}"
+        [globalFilterFields]="['nome', 'email', 'perfil']" [tableStyle]="{'min-width': '75rem'}" [rowHover]="true"
         [(selection)]="usuarioSelected" [showCurrentPageReport]="true" dataKey="id"
         currentPageReportTemplate="Mostrando {first} de {last} de {totalRecords} usuários">
+        <ng-template pTemplate="caption">
+          <div class="flex justify-content-between align-items-center">
+            <h5 class="m-0">Usuários</h5>
+            <div class="p-input-icon-left">
+              <i class="pi pi-search"></i>
+              <input pInputText type="text" (input)="onGlobalFilter(usuariosTable, $event)" placeholder="Buscar..." />
+            </div>
+          </div>
+        </ng-template>
+
         <ng-template pTemplate="header">
           <tr>
             <th pSortableColumn="nome">
@@ -64,8 +79,7 @@
 
             <th>
               <div class="flex justify-content-center">
-                <p-button styleClass="p-button-info" icon="pi pi-plus" label="Novo" pTooltip="Adicionar usuário"
-                  tooltipPosition="top" (onClick)="handleUsuarioEvent(addUsuarioEvent)"></p-button>
+                Ações
               </div>
             </th>
           </tr>
