feat: enhance UsuariosTable to display user profile severity with tags

--- a/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
+++ b/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
@@ -90,7 +90,7 @@
             <td>{{usuario?.nome}}</td>
             <td>{{usuario?.email}}</td>
             <td>{{usuario?.dataCriacao | date: 'dd/MM/yyyy HH:mm:ss'}}</td>
-            <td>{{usuario?.perfil}}</td>
+            <td><p-tag [value]="usuario.perfil" [severity]="getPerfilSeverity(usuario.perfil)"></p-tag></td>
             <td>{{usuario?.ultimoLogin | date: 'dd/MM/yyyy HH:mm:ss'}}</td>
             <td>
               <div class="flex justify-content-center align-content-center align-items-center">
