refactor: simplify usuarios-table component structure

--- a/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
+++ b/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
@@ -1,6 +1,6 @@
-<div class="grid">
+<div>
   <div class="col-12">
-    <p-card styleClass="shadow-3 m-2">
+    <p-card styleClass="shadow-3">
       <p-toolbar styleClass="mb-3">
         <p-button styleClass="p-button-info" icon="pi pi-plus-circle" label="Novo" pTooltip="Adicionar usuário"
           tooltipPosition="top" (onClick)="handleUsuarioEvent(addUsuarioEvent)"></p-button>
