--- a/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
+++ b/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
@@ -1,7 +1,9 @@
 <p-toolbar class="app-toolbar" styleClass="mr-2 ml-2 mt-2">
   <div class="p-toolbar-group-start">
     <div class="logo-container">
-      <img src="assets/img/projeduler-logo.png" alt="Logo">
+      <a routerLink="/home">
+        <img src="assets/img/projeduler-logo.png" alt="Logo">
+      </a>
     </div>
   </div>
 
