feat: add footer component to usuarios home page and clean up footer styles

--- a/src/app/modules/usuarios/page/usuarios-home/usuarios-home.component.html
+++ b/src/app/modules/usuarios/page/usuarios-home/usuarios-home.component.html
@@ -4,3 +4,5 @@
   (deleteUsuarioEvent)="handleDeleteUsuarioAction($event)"></app-usuarios-table>
 
 <p-confirmDialog [style]="{width: '30vw'}"></p-confirmDialog>
+
+<app-footer></app-footer>
