--- a/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
+++ b/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
@@ -15,7 +15,8 @@
             <h5 class="m-0">Usuários</h5>
             <div class="p-input-icon-left">
               <i class="pi pi-search"></i>
-              <input pInputText type="text" (input)="onGlobalFilter(usuariosTable, $event)" placeholder="Buscar..." />
+              <input pInputText class="w-full" type="text" (input)="onGlobalFilter(usuariosTable, $event)"
+                placeholder="Buscar..." />
             </div>
           </div>
         </ng-template>
@@ -23,8 +24,8 @@
         <ng-template pTemplate="header">
           <tr>
             <th pSortableColumn="nome">
-              <div class="flex justify-content-between align-items-center">
-                <div class="flex justify-content-between align-items-center">
+              <div class="flex justify-content-center align-items-center">
+                <div class="flex justify-content-center">
                   Nome
                 </div>
                 <div class="flex justify-content-between align-items-center">
@@ -36,8 +37,8 @@
             </th>
 
             <th pSortableColumn="email">
-              <div class="flex justify-content-between align-items-center">
-                <div class="flex justify-content-between align-items-center">
+              <div class="flex justify-content-center align-items-center">
+                <div class="flex justify-content-center">
                   Email
                 </div>
                 <div class="flex justify-content-between align-items-center">
@@ -49,16 +50,14 @@
             </th>
 
             <th>
-              <div class="flex justify-content-between align-items-center">
-                <div class="flex justify-content-between align-items-center">
-                  Data de Criação
-                </div>
+              <div class="flex justify-content-center">
+                Data de Criação
               </div>
             </th>
 
             <th pSortableColumn="perfil">
-              <div class="flex justify-content-between align-items-center">
-                <div class="flex justify-content-between align-items-center">
+              <div class="flex justify-content-center align-items-center">
+                <div class="flex justify-content-center">
                   Perfil
                 </div>
                 <div class="flex justify-content-between align-items-center">
@@ -70,10 +69,8 @@
             </th>
 
             <th>
-              <div class="flex justify-content-between align-items-center">
-                <div class="flex justify-content-between align-items-center">
-                  Último login
-                </div>
+              <div class="flex justify-content-center">
+                Último Login
               </div>
             </th>
 
@@ -87,11 +84,31 @@
 
         <ng-template pTemplate="body" let-usuario>
           <tr>
-            <td>{{usuario?.nome}}</td>
-            <td>{{usuario?.email}}</td>
-            <td>{{usuario?.dataCriacao | date: 'dd/MM/yyyy HH:mm:ss'}}</td>
-            <td><p-tag [value]="usuario.perfil" [severity]="getPerfilSeverity(usuario.perfil)"></p-tag></td>
-            <td>{{usuario?.ultimoLogin | date: 'dd/MM/yyyy HH:mm:ss'}}</td>
+            <td>
+              <div class="flex justify-content-center">
+                {{usuario?.nome}}
+              </div>
+            </td>
+            <td>
+              <div class="flex justify-content-center">
+                {{usuario?.email}}
+              </div>
+            </td>
+            <td>
+              <div class="flex justify-content-center">
+                {{usuario?.dataCriacao | date: 'dd/MM/yyyy HH:mm:ss'}}
+              </div>
+            </td>
+            <td>
+              <div class="flex justify-content-center">
+                <p-tag [value]="usuario.perfil" [severity]="getPerfilSeverity(usuario.perfil)"></p-tag>
+              </div>
+            </td>
+            <td>
+              <div class="flex justify-content-center">
+                {{usuario?.ultimoLogin | date: 'dd/MM/yyyy HH:mm:ss'}}
+              </div>
+            </td>
             <td>
               <div class="flex justify-content-center align-content-center align-items-center">
                 <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-warning p-button-text"
