--- a/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
+++ b/src/app/modules/usuarios/components/usuarios-table/usuarios-table.component.html
@@ -13,7 +13,7 @@
         <ng-template pTemplate="caption">
           <div class="flex justify-content-between align-items-center">
             <h5 class="m-0">Usuários</h5>
-            <div class="p-input-icon-left">
+            <div class="p-input-icon-left ml-3">
               <i class="pi pi-search"></i>
               <input pInputText class="w-full" type="text" (input)="onGlobalFilter(usuariosTable, $event)"
                 placeholder="Buscar..." />
