feat(projetos-table): implement delete functionality with confirmation dialog

--- a/src/app/modules/projetos/components/projetos-table/projetos-table.component.html
+++ b/src/app/modules/projetos/components/projetos-table/projetos-table.component.html
@@ -157,7 +157,8 @@
                   (click)="handleProjetoEvent(editProjetoEvent, projeto?.id)"></button>
                 <i class="pi pi-ellipsis-v"></i>
                 <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-button-text"
-                  pTooltip="Remover projeto" tooltipPosition="top" (click)="handleDeleteProjeto()"></button>
+                  pTooltip="Remover projeto" tooltipPosition="top"
+                  (click)="handleDeleteProjeto(projeto?.id, projeto?.nome)"></button>
               </div>
             </td>
           </tr>
