--- a/src/app/modules/projetos/components/projetos-table/projetos-table.component.html
+++ b/src/app/modules/projetos/components/projetos-table/projetos-table.component.html
@@ -2,8 +2,14 @@
   <div class="col-12">
     <p-card styleClass="shadow-3">
       <p-toolbar styleClass="mb-3">
-        <p-button styleClass="p-button-info" icon="pi pi-plus-circle" label="Novo" pTooltip="Adicionar projeto"
-          tooltipPosition="top" (onClick)="handleProjetoEvent(addProjetoEvent)"></p-button>
+        <div class="p-toolbar-group-start">
+          <p-button styleClass="p-button-info" icon="pi pi-plus-circle" label="Novo" pTooltip="Adicionar projeto"
+            tooltipPosition="top" (onClick)="handleProjetoEvent(addProjetoEvent)"></p-button>
+          <i class="pi pi-ellipsis-v"></i>
+          <p-button styleClass="p-button-success" icon="pi pi-users" label="Equipe"
+            pTooltip="Adicionar usuários no projeto" tooltipPosition="top"
+            (onClick)="handleUsuarioProjetoEvent(addUsuarioProjetoEvent)"></p-button>
+        </div>
       </p-toolbar>
 
       <p-table #projetosTable [value]="projetos" [rows]="5" [paginator]="true"
@@ -152,6 +158,9 @@
             </td>
             <td>
               <div class="flex justify-content-center align-content-center align-items-center">
+                <button pButton pRipple icon="pi pi-users" class="p-button-rounded p-button-success p-button-text"
+                  pTooltip="Equipe do Projeto" tooltipPosition="top"></button>
+                <i class="pi pi-ellipsis-v"></i>
                 <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-warning p-button-text"
                   pTooltip="Editar projeto" tooltipPosition="top"
                   (click)="handleProjetoEvent(editProjetoEvent, projeto?.id)"></button>
