feat(atividades): integrate AtividadesForm component and enhance AtividadesTable with event handling

--- a/src/app/modules/atividades/page/atividades-home/atividades-home.component.html
+++ b/src/app/modules/atividades/page/atividades-home/atividades-home.component.html
@@ -1,5 +1,6 @@
 <app-toolbar-navigation></app-toolbar-navigation>
 
-<app-atividades-table [atividades]="atividadesList"></app-atividades-table>
+<app-atividades-table [atividades]="atividadesList"
+  (atividadeEvent)="handleAtividadeAction($event)"></app-atividades-table>
 
 <app-footer></app-footer>
