--- a/src/app/modules/atividades/components/atividades-table/atividades-table.component.html
+++ b/src/app/modules/atividades/components/atividades-table/atividades-table.component.html
@@ -4,7 +4,7 @@
       <p-toolbar styleClass="mb-3">
         <div class="p-toolbar-group-start">
           <p-button styleClass="p-button-info" icon="pi pi-plus-circle" label="Novo" pTooltip="Adicionar atividade"
-            tooltipPosition="top"></p-button>
+            tooltipPosition="top" (onClick)="handleAtividadeEvent(addAtividadeEvent)"></p-button>
         </div>
       </p-toolbar>
 
