--- a/src/app/modules/atividades/components/atividades-table/atividades-table.component.html
+++ b/src/app/modules/atividades/components/atividades-table/atividades-table.component.html
@@ -86,7 +86,7 @@
             <th pSortableColumn="usuarioResponsavel.nome">
               <div class="flex justify-content-center align-items-center">
                 <div class="flex justify-content-center">
-                  Usuário Responsavél
+                  Usuário Responsável
                 </div>
                 <div class="flex justify-content-between align-items-center">
                   <p-sortIcon field="usuarioResponsavel.nome"></p-sortIcon>
@@ -149,7 +149,7 @@
             </td>
             <td>
               <div class="flex justify-content-center">
-                {{atividade?.dataCriacao | date: 'dd/MM/yyyy'}}
+                {{atividade?.dataCriacao | date: 'dd/MM/yyyy HH:mm:ss'}}
               </div>
             </td>
             <td>
