feat(tables): add sortable columns for 'Data de Início' and 'Data Fim' in Atividades and Projetos tables

--- a/src/app/modules/projetos/components/projetos-table/projetos-table.component.html
+++ b/src/app/modules/projetos/components/projetos-table/projetos-table.component.html
@@ -56,15 +56,25 @@
               </div>
             </th>
 
-            <th>
-              <div class="flex justify-content-center">
-                Data de Início
+            <th pSortableColumn="dataInicio">
+              <div class="flex justify-content-center align-items-center">
+                <div class="flex justify-content-center">
+                  Data de Início
+                </div>
+                <div class="flex justify-content-between align-items-center">
+                  <p-sortIcon field="dataInicio"></p-sortIcon>
+                </div>
               </div>
             </th>
 
-            <th>
-              <div class="flex justify-content-center">
-                Data Fim
+            <th pSortableColumn="dataFim">
+              <div class="flex justify-content-center align-items-center">
+                <div class="flex justify-content-center">
+                  Data Fim
+                </div>
+                <div class="flex justify-content-between align-items-center">
+                  <p-sortIcon field="dataFim"></p-sortIcon>
+                </div>
               </div>
             </th>
 
