feat(lancamento-horas): add form component for hour logging and update table event handling

--- a/src/app/modules/lancamento-horas/components/lancamento-horas-table/lancamento-horas-table.component.html
+++ b/src/app/modules/lancamento-horas/components/lancamento-horas-table/lancamento-horas-table.component.html
@@ -172,7 +172,7 @@
                 <i class="pi pi-ellipsis-v"></i>
                 <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-button-text"
                   pTooltip="Remover lançamento de hora" tooltipPosition="top"
-                  (click)="handleDeleteLancamentoHora(lancamentoHora?.id, lancamentoHora?.atividade?.id)"></button>
+                  (click)="handleDeleteLancamentoHora(lancamentoHora?.id, lancamentoHora?.atividade?.nome)"></button>
               </div>
             </td>
           </tr>
