--- a/src/app/modules/lancamento-horas/page/lancamento-horas-home/lancamento-horas-home.component.html
+++ b/src/app/modules/lancamento-horas/page/lancamento-horas-home/lancamento-horas-home.component.html
@@ -1,5 +1,7 @@
 <app-toolbar-navigation></app-toolbar-navigation>
 
-<app-lancamento-horas-table [lancamentoHoras]="lancamentoHorasList"></app-lancamento-horas-table>
+<app-lancamento-horas-table [lancamentoHoras]="lancamentoHorasList"
+  (lancamentoHoraEvent)="handleLancamentoHoraAction($event)"
+  (deleteLancamentoHoraEvent)="handleDeleteLancamentoHoraAction($event)"></app-lancamento-horas-table>
 
 <app-footer></app-footer>
