feat(toolbar-navigation): restrict access to Users button for ADMIN role

--- a/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
+++ b/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
@@ -25,7 +25,7 @@
     </p-button>
 
     <p-button icon="pi pi-users" label="Usuários" routerLink="/usuarios" routerLinkActive="active-route"
-      [styleClass]="'nav-button'">
+      [styleClass]="'nav-button'" *appHasRole="['ADMIN']">
     </p-button>
   </div>
 
